--- a/recipes/brocolis.html
+++ b/recipes/brocolis.html
@@ -6,5 +6,31 @@
 </head>
 <body>
     <h1>Brocolis</h1>
-</body>
+    <img src="./imagens/brocolis.jpg" width="30%" alt="Prato de brocolis">
+    <br>
+
+    <h3>Description</h3>
+    <p>Spicy Garlic Broccoli Dish</p>
+    <br>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 tablespoons extra-virgin olive oil</li>
+        <li>1 pound fresh broccoli, cut into spears</li>
+        <li>3 cloves garlic, minced</li>
+        <li>1 pinch red pepper flakes</li>
+        <li>3 tablespoons water</li>
+        <li>salt and ground black pepper to taste</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Heat oil in a nonstick pan</li>
+        <li>Add garlic and pepper flakes to the hot oil and cook for 2 to 3 minutes</li>
+        <li>Add broccoli and stir until well coated in oil</li>
+        <li>Add water and cover the pan.</li>
+        <li>Steam until tender but not mushy, about 5 minutes.</li>
+        <li>Add salt and pepper.</li>
+    </ol>
+</body> 
 </html>
