Added two more recipes based on broccoli.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <br>
-    <a href="./recipes/brocolis.html" >Brocolis</a>
+    <ul>
+        <li><a href="./recipes/broccoli.html" >Broccoli</a></li>
+        <li><a href="./recipes/soyaburguer.html" >Soya Burguer</a></li>
+        <li><a href="./recipes/potato.html" >Potato Salad</a></li>
+    </ul>
+    
 </body>
 </html>
