--- a/recipes/broccoli.html
+++ b/recipes/broccoli.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Brocolis</title>
+    <title>Broccoli</title>
 </head>
 <body>
-    <h1>Brocolis</h1>
-    <img src="./imagens/brocolis.jpg" width="30%" alt="Prato de brocolis">
+    <h1>Broccoli</h1>
+    <img src="./imagens/brocolis.jpg" width="30%" alt="Broccoli Dish">
     <br>
 
     <h3>Description</h3>
